[package]
name = "bluebrick-lmsh1-proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
ctor = "0.4.1"
msgbox = "0.7.0"
bluebrick-proxy = { git = "https://github.com/XdotCore/bluebrick" }
#bluebrick-proxy = { path = "../../loader/rust-proxy-bindings" }
dlopen = "0.1.8"
dlopen_derive = "0.1.4"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.60.0", features = ["Win32_UI_Input_XboxController", "Win32_System_SystemInformation"] }

[lib]
crate-type = ["cdylib"]
